refactored chatbot to be implemented using langgraph, added websearch and added reranker for when retrieving documents

--- a/chatbot/.env
+++ b/chatbot/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY=AIzaSyAKPdifAAziIUB3hLk9OlkWcEEhUFR58_w
+TavilyAPI=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
+reranker=key-FmRhCAdezbP6fx95Ok0TZ7emg3_yi6jDihecuLdS7u6kvtQ-g
